--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
     padding: 70px;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
     font-family: Arial;
 
 }
@@ -23,16 +22,20 @@ body {
 .form {
     color: #ffffff;
     margin: auto;
-    padding: 50px;
+    padding:30px;
+    padding-left: 60px;
+    padding-right: 60px;
     border-radius: 40px;
-    background-color: rgba(0, 0, 0, 0.4);
-    width: 600px;
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 700px;
     
 }
 
 .logo img {
-    width: 400px;
-    align-content: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
 }
 
 ::placeholder{
@@ -41,15 +44,17 @@ body {
 
 .form h1{
     text-align: center;
-    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
     color: #ffffff;
 }
 .form h2 {
     text-align: left;
+    font-size: 28px;
     margin-bottom: 20px;
     color: #ffffff;
+    text-decoration: solid;
 }
-
 
 /* Form group styling */
 div {
@@ -58,7 +63,7 @@ div {
 
 /* Label styling */
 label {
-    font-size: larger;
+    font-size: 20px;
     color: #ffffff;
     
 }
@@ -68,8 +73,8 @@ input {
     width: 100%;
     padding: 15px;
     border: none ;
-    border-radius: 20px;
-    font-size: 16px;
+    border-radius: 18px;
+    font-size: 18px;
     color: #ffffff;
     background-color: rgba(202, 202, 202, 0.4);
     
@@ -78,34 +83,42 @@ input {
 /* Button styling */
 .submit {
     align-items: center;
-    justify-content: center;
-    text-align: center;
-    display: flex;
-    width:  100%;
-    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width:  50%;
+    padding: 14px;
     background-color: #28a745;
     border: none;
-    border-radius: 10px;
+    border-radius: 16px;
     color: white;
-    font-size: 18px;
+    font-size: 20px;
     cursor: pointer;
-    margin-top: 20px;
     
 }
 
 .submit:hover,.download:hover,.image:hover {
-    background-color: #218838;
+    background-color: #ffffff;
+    color: #000000;
     opacity: .9;
+    transition-duration: 0.4s;
+}
+.submit:hover:active,.download:hover:active,.image:hover:active {
+    background-color: #28a745;
+    color: #ffffff;
+    opacity: .9;
+    transition-duration: 0.2s;
 }
 .download,.image{
     align-items: center;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width:  50%;
+    padding: 14px;
     background-color: #28a745;
     border: none;
-    border-radius: 10px;
+    border-radius: 16px;
     color: white;
     font-size: 20px;
     cursor: pointer;
@@ -113,16 +126,14 @@ input {
     margin-bottom: 20px;
 }
 
-
-
-
-
+/* Javascript document elements */
 #document{
     font-family: Arial;
     font-weight: bold;
-    display: flex;
+    font-size: 30px;
     align-items: center;
-    justify-content: center;
+    margin: auto;
+    display: block;
     width: 210mm;
     height: 297mm;
     padding-top: 40px;
@@ -131,13 +142,11 @@ input {
     padding-bottom: 40px;
     background-color: #ffffff; 
     color: rgb(0, 0, 0);
-    font-size: 30px;
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.8) 0 100%), url(logo1.png);
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.7) 0 100%), url(logo1.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: small;
-    border: 2px solid #000; /* Border style */
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+    border: 2px solid rgb(0, 0, 0); 
 }
 #logo img{
     display: block;
@@ -145,13 +154,14 @@ input {
     margin-right: auto;
     width: 90%;
 }
+
 .assignment{
     text-align: center;
     font-size: 18px;
     text-decoration: underline;
 }
 .underline{
-    text-decoration: underline;
+    text-decoration: underline !important;
     color: #154394;
 }
 .space{
@@ -159,11 +169,9 @@ input {
 }
 
 .container{
-    display: flex;
+    display: block;
 }
 .editButton{
     padding-top:200px;
-    padding-left: 140px;
-    padding-right: 100px;
     padding-bottom: 20px;
 }
