--- a/style.css
+++ b/style.css
@@ -20,16 +20,16 @@ body {
 /* Form styling */
 .form {
     color: #ffffff;
-    margin: auto;
-    padding:30px;
+    margin: 30px;
+    padding:20px;
     padding-left: 60px;
     padding-right: 60px;
     border-radius: 40px;
     background-color: rgba(0, 0, 0, 0.7);
-    width: 700px;
+    width: 800px;
     
 }
-footer{
+.footer{
     display: flex;
     height: auto;
     margin-bottom: 20px;
@@ -40,18 +40,11 @@ footer{
     text-align:center;
     border-radius: 30px;
     background-color: rgba(0, 0, 0, 0.7);
-}
-footer a{
-    color: #ffffff;
     text-decoration: none;
-    
 }
-
 
 .logo img {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     width: 90%;
 }
 
@@ -61,21 +54,18 @@ footer a{
 
 .form h1{
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
     color: #ffffff;
 }
 .form h2 {
     text-align: left;
-    font-size: 28px;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     color: #ffffff;
     text-decoration: solid;
 }
 
 /* Form group styling */
 div {
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 /* Label styling */
@@ -108,7 +98,6 @@ input:hover {
 
 /* Button styling */
 .submit {
-    align-items: center;
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -137,7 +126,7 @@ input:hover {
 }
 
 .editButton{
-    padding-top:160px;
+    padding-top:120px;
     padding-bottom: 20px;
     display: flex;
     justify-content: center;
@@ -146,6 +135,7 @@ input:hover {
 .download,.image{
     width: 30%;
     padding: 12px;
+    justify-content: center fixed;
     background-color: #28a745;
     border: none;
     border-radius: 16px;
@@ -156,27 +146,23 @@ input:hover {
 
 /* Javascript document elements */
 .document{
-    padding-top: 20px;
+    padding-top: none;
     width: 210mm;
     height: 297mm;
     padding: 3mm;
-    justify-content: center;
-    align-items: center;
     background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-
 }
 .inside-document{
     width: 200mm;
     height: 287mm;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 28px;
     align-items: center;
     margin: 2mm;
     display: block;
     padding-top: 30px;
     padding-left: 70px;
-    background: #ffffff !important;
+    background-color: #ffffff !important;
     background-image: linear-gradient(to left, rgba(255, 255, 255, 0.75) 0% 100%),url(logo1.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -184,15 +170,18 @@ input:hover {
     border: 2px solid rgb(0, 0, 0);
 
 }
-#logo img{
+img{
     display: flex;
     width: 90%;
 }
-
+#text-gap{
+    padding-bottom: 5px;
+}
 .assignment{
     text-align: center;
     font-size: 24px;
     text-decoration: underline;
+    padding-bottom: 15px;
 }
 .underline{
     text-decoration: underline;
